--- a/ods/pom.xml
+++ b/ods/pom.xml
@@ -216,7 +216,7 @@
                                     <!--通过maven 把项目打包成jar，然后运行main方法，有两种情况，
                                     一种是在MANIFEST.MF中指定运行的main方法；
                                     另外一种是通过命令行指定运行的main方法的包；同时可以添加对应的参数传递到main方法中去-->
-                                    <mainClass>top.chendaye666.v2.KafkaToSparkIceberg</mainClass>
+                                    <mainClass>top.chendaye666.v2.KafkaToSparkIcebergOds</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
