--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>testmaven</module>
         <module>flumeinterceptor</module>
         <module>hiveudtf</module>
+        <module>realtimewarehouse</module>
     </modules>
 
     <properties>
