--- a/flink1.14iceberg0.13test/pom.xml
+++ b/flink1.14iceberg0.13test/pom.xml
@@ -9,11 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>T_Warehouse</artifactId>
+    <artifactId>flink1.14iceberg0.13test</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <flink.version>1.14.4</flink.version>
+        <iceberg.version>0.13.1</iceberg.version>
     </properties>
 
     <dependencies>
@@ -39,10 +41,15 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-api-java-bridge_${scala.binary.version}</artifactId>
         </dependency>
+
+
+
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-planner-blink_${scala.binary.version}</artifactId>
+            <artifactId>flink-table-planner_2.12</artifactId>
+            <version>1.14.4</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-scala_${scala.binary.version}</artifactId>
@@ -52,15 +59,28 @@
             <artifactId>flink-table-common</artifactId>
         </dependency>
 
+
+
         <!-- Iceberg -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.iceberg</groupId>-->
+<!--            <artifactId>iceberg-core</artifactId>-->
+<!--            <version>${iceberg.version}</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.iceberg/iceberg-flink -->
         <dependency>
             <groupId>org.apache.iceberg</groupId>
-            <artifactId>iceberg-flink-runtime</artifactId>
+            <artifactId>iceberg-flink</artifactId>
+            <version>${iceberg.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-flink-runtime-1.14</artifactId>
+            <version>${iceberg.version}</version>
+        </dependency>
 
-
-        <!--Hadoop-->
+        <!--Hadoop hadoop-hdfs-->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
@@ -99,5 +119,4 @@
         </dependency>
 
     </dependencies>
-
 </project>
