--- a/flink1.14iceberg0.13test/pom.xml
+++ b/flink1.14iceberg0.13test/pom.xml
@@ -58,7 +58,11 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-common</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
 
         <!-- Iceberg -->
