--- a/T_ADS/pom.xml
+++ b/T_ADS/pom.xml
@@ -57,6 +57,7 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
             <version>${flink.version}</version>
+            <scope>test</scope>
         </dependency>
 
 
@@ -103,6 +104,13 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-sql-connector-kafka_${scala.binary.version}</artifactId>
         </dependency>
+        <!-- 写入数据到clickhouse -->
+        <dependency>
+            <groupId>ru.yandex.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
         <!--other-->
         <dependency>
             <groupId>org.projectlombok</groupId>
