--- a/T_ADS/pom.xml
+++ b/T_ADS/pom.xml
@@ -144,7 +144,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.controller.NcddWindowTestController</mainClass>
+                                    <mainClass>top.chendaye666.controller.NcddJoinController</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
