--- a/T_Etl/pom.xml
+++ b/T_Etl/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>flink-table-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
         <!-- Iceberg -->
