--- a/taskrewritemanifests/pom.xml
+++ b/taskrewritemanifests/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <iceberg.version>0.13.1</iceberg.version>
     </properties>
 
     <dependencies>
@@ -31,7 +32,8 @@
         <!-- Iceberg -->
         <dependency>
             <groupId>org.apache.iceberg</groupId>
-            <artifactId>iceberg-flink-runtime</artifactId>
+            <artifactId>iceberg-flink-runtime-1.14</artifactId>
+            <version>${iceberg.version}</version>
         </dependency>
 
         <!--spark-->
