--- a/T_Maintenance/pom.xml
+++ b/T_Maintenance/pom.xml
@@ -163,7 +163,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.timedtask.CompactDataFilesAction</mainClass>
+                                    <mainClass>top.chendaye666.timedtask.spark.CompactDataFilesAction</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
