--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>T_ADS</module>
         <module>flink1.14iceberg0.13test</module>
         <module>T_Maintenance</module>
+        <module>tbdstest</module>
     </modules>
 
     <properties>
@@ -44,6 +45,7 @@
         <flink.version>1.12.5</flink.version>
         <iceberg.version>0.12.0</iceberg.version>
         <flink1.14.3.version>1.14.3</flink1.14.3.version>
+        <flink1.14.4.varsion>1.14.4</flink1.14.4.varsion>
         <iceberg.version0.13.1>0.13.1</iceberg.version0.13.1>
         <hive.version>3.1.2</hive.version>
         <hive.cdh.version>2.1.1-cdh6.3.1</hive.cdh.version>
