--- a/T_Etl/pom.xml
+++ b/T_Etl/pom.xml
@@ -110,6 +110,12 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-sql-connector-kafka_${scala.binary.version}</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka-0.8_2.11</artifactId>
+            <version>1.10.3</version>
+        </dependency>
         <!--other-->
         <dependency>
             <groupId>org.projectlombok</groupId>
